Remove horizontal scroll issue on mobile

--- a/pz-client/src/topic/topic.scss
+++ b/pz-client/src/topic/topic.scss
@@ -16,8 +16,8 @@
     }
 
     .side-section-container {
-      @include make-col-offset(1);
       @include make-col-span(4);
+      padding-left: 3rem;
 
       .side-section-block {
         margin-bottom: 1.5rem;
